--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
     "eslint": "4.16.0",
-    "eslint-config-htmlacademy": "0.4.x",
+    "eslint-config-htmlacademy": "^0.4.2",
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^5.0.3",
